--- a/index.html
+++ b/index.html
@@ -14,46 +14,46 @@
 
 <body class="container-fluid p-3">
     <header>
-        <a href="./index.html" class="d-flex justify-content-center">
+        <a href="./index.html" class="d-flex align-items-center justify-content-center">
             <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
-        </a>
-        <nav class="navbar navbar-expand-lg navbar-light bg-brown">
-            <div class="container">
-                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
-                        <li class="nav-item text-center">
-                            <a class="nav-link active" aria-current="page" href="#" id="activo">Inicio</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./pages/galeria.html">Galería</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./pages/acerca.html">Acerca</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="text-center mx-4 pt-3">
+                <h1 class="mb-0">Miau café</h1>
+                <p>Un café para ronronear</p>
             </div>
-        </nav>
+        </a>
     </header>
+    <!--intente poner el navbar sticky cuando bajara pero no funcionaba dentro del header y fuera de el funciona correctamente-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+        <div class="container">
+            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                    <li class="nav-item text-center">
+                        <a class="nav-link active" aria-current="page" href="#" id="activo">Inicio</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./pages/galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./pages/michis.html">Nuestros michis</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./pages/acerca.html">Acerca</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <main>
         <div class="card bg-dark text-black text-center d-none d-lg-block">
             <img src="./assets/img/banner.jpeg" class="card-img" alt="Banner Miau Cafe">
-            <div class="card-img-overlay">
-                <h1 class="card-title ">Miau Cafe</h1>
-                <p class="card-text">Un café para ronronear</p>
-            </div>
         </div>
-        </section>
         <div class="container my-5">
             <div class="row">
                 <div class="col-lg-6 col-sm-12 mb-4">
